Add missing final qualifiers across codebase Remove unused code